l10n: Updates to Marathi (mr) translation
Transmitted-via: Transifex (translate.fedoraproject.org)

--- a/po/mr.po
+++ b/po/mr.po
@@ -2358,7 +2358,7 @@ msgstr "डिस्क्स् सिलेक्टर नष्ट करा
 
 #: iw/cleardisks_gui.py:44 iw/filter_gui.py:412
 msgid "You must select at least one drive to be used for installation."
-msgstr "प्रतिष्ठापानकरीता किमान एक ड्राइव्ह नििवडायला हवे."
+msgstr "प्रतिष्ठापानकरीता किमान एक ड्राइव्ह निवडायला हवे."
 
 #: iw/cleardisks_gui.py:54
 msgid "You must select one drive to boot from."
