l10n: Updates to Spanish (Castilian) (es) translation
Transmitted-via: Transifex (translate.fedoraproject.org)

--- a/po/es.po
+++ b/po/es.po
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: anaconda.rhel6-branch.es\n"
 "Report-Msgid-Bugs-To: anaconda-devel-list@redhat.com\n"
 "POT-Creation-Date: 2010-03-11 11:00-1000\n"
-"PO-Revision-Date: 2010-03-29 11:27+1000\n"
+"PO-Revision-Date: 2010-03-30 14:22+1000\n"
 "Last-Translator: Gladys Guerrero  <gguerrer@redhat.com>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -450,7 +450,7 @@ msgstr " con el proveedor de este software."
 #: constants.py:84
 #, python-format
 msgid " against anaconda at %s"
-msgstr " contra Anaconda en %s"
+msgstr " a nombre de Anaconda en %s"
 
 #: gui.py:108
 msgid "An error occurred saving screenshots to disk."
@@ -3269,7 +3269,7 @@ msgstr ""
 # ../loader/urls.c:357 ../textw/userauth_text.py:37
 #: iw/blpasswidget.py:112
 msgid "_Password:"
-msgstr "_Contraseña:"
+msgstr "C_ontraseña:"
 
 # ../iw/account_gui.py:189 ../iw/bootloaderpassword_gui.py:91
 # ../textw/bootloader_text.py:385
@@ -8345,7 +8345,7 @@ msgstr "Re_iniciar"
 # ../gui.py:605
 #: ui/anaconda.glade.h:3
 msgid "_Next"
-msgstr "Si_guiente"
+msgstr "Siguie_nte"
 
 #: ui/autopart.glade.h:1
 msgid "<b>Shrink partition _to size (in MB):</b>"
